--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--Author-->
     
-        <meta name="author" content="Slava Koy">
+        <meta name="author" content="Slava Koy Test">
     
 
     <!--Open Graph Title-->
